--- a/P_ofertas.html
+++ b/P_ofertas.html
@@ -5,7 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ofertas de temporada</title>
     <link rel="stylesheet" href="PStyle.css" />
+    <script src="Pjava.js" defer></script>
   </head>
-  <body></body>
-  <p>Por el momento, no se encuentran ofertas de temporada</p>
+  <body>
+    <button id="OFERTAS" onclick="FECHAS()">ofertas, prueba</button>
+    <p id="texto"></p>
+
+    <div id="temporada_navideña" class="tamaño_imagen">
+      <img
+        src="https://tse1.mm.bing.net/th/id/OIP.f7REPvlJjtzs-jZ1Nkd4YQHaHa?cb=ucfimg2ucfimg=1&rs=1&pid=ImgDetMain&o=7&rm=3"
+        alt="caja de jengibre;"
+      />
+      <img
+        src=" https://th.bing.com/th/id/R.3b7a56b5fe014b1f9c6fdb5b7a46c189?rik=RW3g8EyJEsPDrQ&pid=ImgRaw&r=0"
+        alt="chocolate Ferrero"
+      />
+    </div>
+  </body>
 </html>
