--- a/Pmenu.html
+++ b/Pmenu.html
@@ -4,23 +4,75 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Menu</title>
-    <link rel="stylesheet" href="PStyle.css" />
+
     <i class="fa-solid fa-magnifying-glass-location"></i>
     <script src="Pjava.js" defer></script>
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+/>
+
+
+
+
+    <link rel="stylesheet" href="PStyle.css" />
   </head>
   <body>
-    <form id="formulario">
-      <input
-        class="icono-busqueda"
-        type="text"
-        id="busqueda"
-        placeholder="escribe aqui la marca"
-      />
-      <button type="submit" onclick="Buscar_Producto()" id="buscar_Producto">
-        buscar
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarTogglerDemo03"
+        aria-controls="navbarTogglerDemo03"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
       </button>
-    </form>
+      <a class="navbar-brand" href="#">Dulceria</a>
 
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+          <li class="nav-item active">
+            <a class="nav-link" href="Pindex.html"
+              >Home <span class="sr-only"></span
+            ></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Micarrito.html">MI CARRITO</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Busqueda</a>
+          </li>
+        </ul>
+        <form id="formulario" class="form-inline">
+          <input
+            class="form-control mr-sm-2"
+            type="text"
+            id="busqueda"
+            placeholder="Marca de tu producto"
+            aria-label="Search"
+          />
+          <button
+            class="btn btn-outline-success my-2 my-sm-0"
+            type="submit"
+            onclick="Buscar_Producto()"
+            id="buscar_Producto"
+          >
+            Buscar
+          </button>
+        </form>
+      </div>
+    </nav>
+
+    <p class="parrafos">Mas vendidos!</p>
     <p id="texto"></p>
 
     <div class="tamaño_imagen">
@@ -30,7 +82,6 @@
           src="https://i5.walmartimages.com.mx/gr/images/product-images/img_large/00075752802634L.jpg"
           alt="imagenes de panditas"
         />
-
         <span class="Price"> 22</span>
       </div>
 
@@ -61,7 +112,56 @@
         <span class="Price">75</span>
       </div>
     </div>
+    <h2 class="parrafos">Tambien puede interesarte:</h2>
 
-    <a class="boton" href="Pcarrito.html" onclick="total()"> MI CARRITO</a>
+  <div class="tamaño_imagen">
+        <span class="diseño_texto">Chocolate Ferrero</span>
+        <img
+          src=" https://th.bing.com/th/id/R.3b7a56b5fe014b1f9c6fdb5b7a46c189?rik=RW3g8EyJEsPDrQ&pid=ImgRaw&r=0"
+          alt="chocolate Ferrero"
+        />
+        <span class="Price">225</span>
+        <i class="bi bi-cart-plus-fill"></i>
+      </div>
+
+      <div class="tamaño_imagen">
+        <span class="diseño_texto">M&M, Edicon Navideño</span>
+        <img
+          src="https://i5.walmartimages.com.mx/mg/gm/3pp/asr/bcd8b103-4fda-4ab8-9b05-df86543f64d8.2b1258eecd1ea561065513e3939cb280.jpeg?odnHeight=612&odnWidth=612&odnBg=FFFFFF"
+          alt="M&M navideño"
+        />
+        <span class="Price">129</span>
+      </div>
+
+      <div class="tamaño_imagen">
+        <span class="diseño_texto">Snickers, Edicion Navidad</span>
+        <img
+          src="https://i5.walmartimages.com.mx/mg/gm/3pp/asr/2f6a84e3-a16b-429f-9b7d-e56af0fe5885.ddf7a0e8c90fd6f017d80b700f997023.jpeg?odnHeight=612&odnWidth=612&odnBg=FFFFFF"
+          alt="snickers, navidad"
+        />
+        <span class="Price">185</span>
+      </div>
+      <div class="tamaño_imagen">
+        <span class="diseño_texto">Galletas, "Santa Claus"</span>
+        <img
+          src="https://luegopagocdn.azureedge.net/luegopago-uploads/compressed/13893%20X%202-2_202311232549.jpg"
+          alt="galletas, empaque corazon"
+        />
+
+        <span class="Price"> 125</span>
+      </div>
+      <div class="tamaño_imagen">
+        <span class="diseño_texto">Chocolate Lindt</span>
+        <img
+          src="https://i5.walmartimages.com.mx/mg/gm/3pp/asr/8be08ab1-9553-49aa-90ab-f461bb21fa9b.8979721fb370eaec95c1813f564e4365.jpeg?odnHeight=612&odnWidth=612&odnBg=FFFFFF"
+          alt="chocolate,"
+        />
+        <span class="Price">132</span>
+      </div>
+    </div>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
